--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  modal_bottom_sheet: ^2.0.0
+  modal_bottom_sheet:
+   git:
+     url: https://github.com/followthemoney1/modal_bottom_sheet.git
+     ref: main
+     path: modal_bottom_sheet
   collection: ^1.15.0
   universal_platform: ^1.0.0+1
 
