--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  modal_bottom_sheet: ^3.0.0-pre
   collection: ^1.15.0
   universal_platform: ^1.0.0+1
-  modal_bottom_sheet:
-    git:
-      url: https://github.com/followthemoney1/modal_bottom_sheet.git
-      ref: main
-      path: modal_bottom_sheet
-  
 
 flutter:
   assets:
